--- a/www/css/index.css
+++ b/www/css/index.css
@@ -22,6 +22,7 @@ body {
 
 
 h1 {
+  font-family: 'Varela Round', sans-serif;
   font-size:24px;
   font-weight:normal;
   margin:0px;
@@ -64,4 +65,8 @@ h1 {
 .blink {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
+}
+
+#home .page__background {
+  background-image: url('../img/Splash.png') !important;
 }
