--- a/www/css/login.css
+++ b/www/css/login.css
@@ -1,5 +1,5 @@
 #login-1 .page__background {
-  background-image: url('../img/Splash.png');
+  background-image: url('../img/Splash-animation.gif');
   background-size: cover;
   background-position: center;
 }
@@ -22,7 +22,7 @@
   background-position: center;
 }
 
-#login-2 {
+#login {
   text-align: center;
 }
 
@@ -36,5 +36,28 @@
   font-size: 42px;
   color: #FFF;
   width: 250px;
+  height: 60px;
+}
+
+#login-3 .space {
+  height: 200px;
+}
+
+#login-3 p {
+  font-family: 'Varela Round';
+  font-size: 42px;
+  color: #FFF;
+}
+
+#login-3 span {
+  font-size: 16px;
+  margin-right: 16px;
+}
+
+#login-3 input {
+  text-align: center;
+  font-size: 36px;
+  color: #FFF;
+  width: 200px;
   height: 60px;
 }
