--- a/www/css/login.css
+++ b/www/css/login.css
@@ -28,25 +28,35 @@
 
 #login-2 p {
   font-family: 'Varela Round';
-  font-size: 42px;
+  font-size: 36px;
   color: #FFF;
+  margin-top: 20px;
 }
 
 #login-2 input {
-  font-size: 42px;
+  font-size: 36px;
   color: #FFF;
   width: 250px;
   height: 60px;
   text-align: center;
 }
 
+#login-2 .light-image {
+  display: block;
+  margin-top: 10%;
+  margin-bottom: -5%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
+
 #login-3 .space {
-  height: 200px;
+  height: 160px;
 }
 
 #login-3 p {
   font-family: 'Varela Round';
-  font-size: 42px;
+  font-size: 38px;
   color: #FFF;
 }
 
