--- a/www/css/index.css
+++ b/www/css/index.css
@@ -9,8 +9,9 @@ body {
   -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
   background-color:#E4E4E4;
   background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-  font-family: system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
+  font-family: 'Varela Round', system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
   font-size:12px;
+  color: #FFF;
   height:100vh;
   margin:0px;
   padding:0px;
@@ -18,7 +19,6 @@ body {
   padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-right, 0px);
   width:100%;
 }
-
 
 h1 {
   font-family: 'Varela Round', sans-serif;
@@ -93,4 +93,11 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
+}
+
+#hello-message {
+  font-size: 40px;
+  text-align: center;
+  font-family: 'Varela Round', system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
+  color: #FFF;
 }
