--- a/www/css/index.css
+++ b/www/css/index.css
@@ -67,7 +67,7 @@ h1 {
 }
 
 .home-background .page__background{
-  background-image: url('../img/kaamosArtboard 6.jpg') !important;
+  background-image: url('../img/home_light_on.png') !important;
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
@@ -87,17 +87,32 @@ h1 {
   background-size: cover; /* Resize the background image to cover the entire container */
 }
 
-.home-image {
-  display: block;
-  margin-top: 10%;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-}
-
 #hello-message {
-  font-size: 40px;
+  font-size: 35px;
+  font-weight: bold;
+  margin-top: 50vh;
+  margin-bottom: 0px;
   text-align: center;
   font-family: 'Varela Round', system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
   color: #FFF;
+}
+
+#hello-message-tag {
+  font-size: 20px;
+  margin-top: 0px;
+  text-align: center;
+  font-family: 'Varela Round', system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
+  color: #FFF;
+}
+
+#quote {
+  font-size: 20px;
+  text-align: center;
+  font-family: 'Varela Round', system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
+  color: #FFF;
+  background-color: rgba(240, 240, 240, 0.3);
+  border-radius: 30px;
+  padding: 20px;
+  margin: 40px;
+
 }
