--- a/www/css/index.css
+++ b/www/css/index.css
@@ -114,5 +114,54 @@ h1 {
   border-radius: 30px;
   padding: 20px;
   margin: 40px;
+}
 
+.light-card {
+  height: 155px;
+  width: 85%;
+  text-align: center;
+  display: block;
+  margin-top: 10%;
+  margin-bottom: -5%;
+  margin-left: auto;
+  margin-right: auto;
+  /* border-radius: 40px; */
+}
+
+.light-card h2 {
+  font-size: 26px;
+  margin-top: 0px;
+  text-align: center;
+  font-family: 'Varela Round', system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
+  color: #FFF;
+  padding-top: 50px;
+}
+
+.light-card p {
+  font-size: 12px;
+  margin-top: -10px;
+  text-align: center;
+  font-family: 'Varela Round', system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
+  color: #FFF;
+}
+
+.light-card:nth-child(1) {
+  margin-top: 100px; /* First item needs to be a bit more down */
+
+  background-image: url('../img/light_schedule.png') !important;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
+.light-card:nth-child(2) {
+  background-image: url('../img/light_therapy.png') !important;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
+.light-card:nth-child(3) {
+  background-image: url('../img/light_evening.png') !important;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
 }
