--- a/www/css/index.css
+++ b/www/css/index.css
@@ -165,3 +165,33 @@ h1 {
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
 }
+
+.light-back-button {
+  height: 50px;
+  width: 50px;
+  border-radius: 10px;
+  display: block;
+  background-color: white;
+}
+
+#light-morning {
+  height: 100%;
+  background-image: url('../img/light_morning_background.png') !important;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
+#light-therapy {
+  height: 100%;
+  background-image: url('../img/light_therapy_background.png') !important;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
+#light-evening {
+  height: 100%;
+  background-image: url('../img/light_evening_background.png') !important;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
