--- a/www/css/index.css
+++ b/www/css/index.css
@@ -188,7 +188,7 @@ h1 {
 }
 #light-therapy {
   height: 100%;
-  background-image: url('../img/light_therapy_background.png') !important;
+  background-image: url('../img/light-therapy-new.png') !important;
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
