--- a/www/css/index.css
+++ b/www/css/index.css
@@ -267,6 +267,10 @@ div .lightToggle {
   opacity: 0.3;
 }
 
+#light-therapy {
+  opacity: 0.3;
+}
+
 #savanna-button {
   display: block;
   margin-top: 260px;
