--- a/www/css/mood.css
+++ b/www/css/mood.css
@@ -79,3 +79,22 @@
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
 }
+
+.tracker-content {
+  margin-top: 120%;
+  height: 20%;
+  margin-bottom: -25px;
+  font-size: 20px;
+  text-align: center;
+  font-family: 'Varela Round', system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
+  color: #FFF;
+  overflow-y: scroll;
+}
+
+
+.tracker-content div{
+  background-color: rgba(240, 240, 240, 0.3);
+  border-radius: 30px;
+  padding: 15px;
+  margin: 10px 20px 10px 20px;
+}
